Fix backwards compatibility for 1.19+ using reflection